Quirksmode: Break Tag Extra Space Bug https://bugs.webkit.org/show_bug.cgi?id=11943

Reviewed by David Hyatt.

Source/WebCore:

Collapse away all space between text and a hard line-break when in a right-aligned
container so that the trailing space doesn't push the text away from the container edge.

Test: fast/text/whitespace/trailing-space-before-br-in-right-aligned-text.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::LineBreaker::nextSegmentBreak):

LayoutTests:

* fast/text/whitespace/trailing-space-before-br-in-right-aligned-text-expected.html: Added.
* fast/text/whitespace/trailing-space-before-br-in-right-aligned-text.html: Added.


Canonical link: https://commits.webkit.org/139568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156053 268f45cc-cd09-0410-ab3c-d52691b4dbfc